Working on #30. changing white-space: no-wrap; to white-space: nowrap; to be syntactically correct

--- a/sass/partials/_syntax.scss
+++ b/sass/partials/_syntax.scss
@@ -90,7 +90,7 @@ p, li {
   code {
     @extend .mono;
     display: inline-block;
-    white-space: no-wrap;
+    white-space: nowrap;
     background: #fff;
     font-size: .8em;
     line-height: 1.5em;
